template inheritance added

--- a/Part-3/templates/home.html
+++ b/Part-3/templates/home.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-</head>
-<body>
-    <h1>Welcome to Home Page!</h1>
-</body>
-</html>
+{% extends "layout.html" %}
+
+{% block content %}
+<ul>
+    <li>Home</li>
+    <li>Employees</li>
+    <li>Contact Us</li>
+    <li>Support Us</li>
+</ul>
+{% endblock %}
