evaluate page for adding if else comditions

--- a/Part-3/templates/about.html
+++ b/Part-3/templates/about.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 <div>
-    <p>We are the pioneer of AI and ML.</p>
+    <p>We are the pioneer of AI and Machine Learning.</p>
 </div>
 {% endblock %}
