--- a/Part-3/templates/home.html
+++ b/Part-3/templates/home.html
@@ -4,8 +4,8 @@
 <h3>Contents:</h3>
 <ul>
     <li>Home</li>
-    <li>Employees</li>
+    <li><a href=" {{ url_for('employees') }}" target="_blank">Employees</a></li>
+    <li><a href=" {{ url_for('about') }} " target="_blank">About</a></li>
     <li>Contact Us</li>
-    <li>Support Us</li>
 </ul>
 {% endblock %}
