--- a/Part-4/templates/layout.html
+++ b/Part-4/templates/layout.html
@@ -9,6 +9,6 @@
     <h1>Welcome to the {{ title }} page!</h1>
 
     {% block content %}
-    {% endblock content %}
+    {% endblock %}
 </body>
 </html>
